--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes!</h1>
+        <a href="./recipes/prawn-pasta.html" target="_blank">Prawn Pasta</a>
     </body>
 </html>
